# AstroPlasma

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .tokeignore  LICENSE  MillerBreg_OVII.txt  README.md  VirialRad.txt  __init__.py  codemeta.json  constants.py  coolLambda.py  emission.py  fetchData.py  fetch_data.py  ionization.py  nHval.txt  pyproject.toml  requirements-dev.txt  requirements.txt  spectrum.py
.github/workflows/: AstroPlasma.yml  lines_of_code.yml  pre-commit.yml
astro_plasma/: __init__.py
astro_plasma/core/: compat.py  constants.py  data_dir.py  datasift.py  download_database.py  functions.py  ionization.py  spectrum.py  utils.py
astro_plasma/data/: solar_GASS10.abn
cloudy-codes/coolingFunction/: cddefines.h  cdstd.h  cloudyconfig.h  compile-command  hazy_coolingcurve.cpp  mpi_utilities.h  version.h
cloudy-codes/emmSpec/: generateCloudyScript-parallel.py  slurm-python-job  slurm-script
cloudy-codes/ionFrac/: ProgressBar.py  generate-hashlist.py  generateIonFraction-parallel.py  slurm-python-job
cloudy-codes/ionFrac/src/: cddrive.h  compile-script.sh  cpu.h  ionization.cpp
cloudy-data/: cert.pem  openssl.cnf  server.py  solar_GASS10.abn
example-scripts/: astro_plasma  ionization_cloudy_compare.py  parallel_query.py  user_guide.ipynb
misc/: VirialRad.txt  apjs456058t3_mrt.txt  nHval.txt
others/: MillerBreg_OVII.txt  apjs456058t3_mrt.txt
requirements/: requirements-all.txt  requirements-dev.txt  requirements-gpu.txt  requirements.txt
tests/: ion-frac-Oxygen.txt  ionization_cloudy_test.py  sample_spectrum.txt  test_astro_palsma_basic.py  test_astro_palsma_run.py  test_basic.py  test_cuda.py  user_guide.ipynb
