# Base poetry configuration
[tool.poetry]
name = "astro-plasma"
version = "0.1.0"
description = "A Cloudy database with functions to quickly interpolate physical state of astrophysical plasma without detailed Plasma modelling."
authors = ["Gurkirat Singh <tbhaxor@gmail.com>", "Alankar <alankardutta@iisc.ac.in>"]
license = "MIT"
readme = "README.md"
packages = [{include = "astro_plasma"}]

# Main install requirements
[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
h5py = "^3.7.0"
urllib3 = "^1.26.15"
python-dotenv = "1.0.0"
scipy = "1.9.3"
pytest = "^7.4.3"
rich = "^14.2.0"
poetry-plugin-export = "^1.6.0"
colorama = "^0.4.6"
webdav4 = "^0.10.0"

# Packages required for development
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.261"
mypy = "^1.2.0"
types-requests = "^2.28.11.17"
pre-commit = "^3.3.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
matplotlib = "^3.7.1"

[tool.poetry.group.cloudy_run]
optional = true

[tool.poetry.group.cloudy_run.dependencies]
mpi4py = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configurations
[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "Q"]

[tool.ruff.lint.per-file-ignores]
"__init__.py"  = ["F401"]

# Black formatter configuration
[tool.black]
line-length = 160
