[project]
name = "astro-plasma"
version = "0.1.0"
description = "A Cloudy database with functions to quickly interpolate physical state of astrophysical plasma without detailed Plasma modelling."
authors = [
    {name = "Gurkirat Singh", email = "tbhaxor@gmail.com"},
    {name = "Alankar Dutta", email = "alankardutta@iisc.ac.in"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "h5py>=3.7.0",
    "urllib3>=1.26.15",
    "python-dotenv==1.0.0",
    "scipy==1.17.1",
    "rich>=14.2.0",
    "colorama>=0.4.6",
    "webdav4>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "ruff>=0.0.261",
    "mypy>=1.2.0",
    "types-requests>=2.28.11.17",
    "pre-commit>=3.3.1",
    "pytest>=7.4.3",
]
test = [
    "matplotlib>=3.7.1",
]
cloudy = [
    "mpi4py>=3.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["astro_plasma"]

# Ruff configurations
[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "Q"]

[tool.ruff.lint.per-file-ignores]
"__init__.py"  = ["F401"]

# Black formatter configuration
[tool.black]
line-length = 160
